--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
     </head>
     <body>
-        Hello Wordl
+        <div>
+            <img src="images/aaaaa.JPG" alt="profile image" />
+            <h2>Abel Bima Wiratama</h2>
+         </div>
     </body>
 </html>
