Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
     </head>
     <body>
-        <div>
-            <img src="images/aaaaa.JPG" alt="profile image" />
-            <h2>Abel Bima Wiratama</h2>
+        <div id="profile-container">
+            <img id="profile-image" src="images/aaaaa.JPG" alt="profile image" />
+            <h2 id="profile-name">Abel Bima Wiratama</h2>
          </div>
     </body>
 </html>
