added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
             <img id="profile-image" src="images/aaaaa.JPG" alt="profile image" />
             <h2 id="profile-name">Abel Bima Wiratama</h2>
          </div>
+        <div id="footer">Footer</div>
     </body>
 </html>
